# segment7-esp32cam-rpi

./: LICENSE  README.md
esp32-cam/: README.md  main.ino
raspberrypi/: CMakeLists.txt  README.md  main.cpp
raspberrypi/include/: helpers.h  image_downloader.h  image_processor.h  notifier.h  ocr_processor.h
raspberrypi/src/: helpers.cpp  image_downloader.cpp  image_processor.cpp  main.cpp  notifier.cpp  ocr_processor.cpp
